--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   </body>
 </html>
